# bevy_mod_plotters

./: Cargo.toml  README.md
examples/: anim_graph.rs  draw_graph.rs
src/: lib.rs  plot.wgsl
